assets/scss/base/_reset.scss
/* ═══════════════════════════════════════════════════════════════════════════════
   BASE RESET
   ═══════════════════════════════════════════════════════════════════════════════ */

*, *::before, *::after {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
}

body[data-surface="backoffice"] {
  overflow: hidden;
}

html {
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  font-family: var(--s-body-font);
  font-size: var(--s-body-size);
  line-height: var(--s-body-leading);
  color: var(--s-body-color);
  // overflow-x: clip;
}

ul, ol {
  margin-bottom: 0;
}

